--- a/src/main/resources/fxml/SimpleVertexView.fxml
+++ b/src/main/resources/fxml/SimpleVertexView.fxml
@@ -1,35 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root id="vertexGroup" fx:id="vertexGroup" type="Group" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uirebels.grapheditor.controller.SimpleVertexViewController">
+<fx:root id="vertexPane" fx:id="vertexPane" type="Pane" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox id="vertexVBox" fx:id="vertexVBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#editTask" prefHeight="100.0" prefWidth="180.0">
+      <VBox id="vertexVBox" fx:id="vertexVBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="175.0">
          <children>
-            <GridPane id="bannerGridPane" fx:id="bannerGridPane" hgap="2.0" prefHeight="20.0" prefWidth="180.0">
+            <GridPane id="bannerGridPane" fx:id="bannerGridPane" hgap="2.0" prefHeight="20.0" prefWidth="175.0">
               <columnConstraints>
-                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="140.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="NEVER" maxWidth="40.0" minWidth="10.0" prefWidth="40.0" />
+                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="140.0" minWidth="10.0" prefWidth="124.0" />
+                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="29.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="NEVER" maxWidth="40.0" minWidth="10.0" prefWidth="24.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="25.0" vgrow="NEVER" />
               </rowConstraints>
                <children>
-                  <Label id="vertexEditLabel" fx:id="vertexEditLabel" onMouseClicked="#editTask" text="Edit" />
-                  <Label id="vertexCloseLabel" fx:id="vertexCloseLabel" alignment="CENTER" contentDisplay="CENTER" onMouseClicked="#deleteTask" prefHeight="18.0" prefWidth="20.0" text="X" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
+                  <Label id="vertexNameLabel" fx:id="vertexNameLabel" text="Task Name">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <GridPane.margin>
+                        <Insets left="2.0" />
+                     </GridPane.margin></Label>
+                  <Label id="vertexEditLabel" fx:id="vertexEditLabel" text="Edit" GridPane.columnIndex="1">
+                     <font>
+                        <Font size="12.0" />
+                     </font></Label>
+                  <Label id="vertexCloseLabel" fx:id="vertexCloseLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="20.0" text="X" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+                     <font>
+                        <Font size="12.0" />
+                     </font></Label>
                </children>
             </GridPane>
-            <TextArea id="nameTextArea" fx:id="nameTextArea" prefHeight="80.0" prefWidth="180.0" promptText="Enter Task Name" wrapText="true">
+            <TextArea id="vertexTextArea" fx:id="vertexTextArea" prefHeight="80.0" prefWidth="180.0" promptText="Enter Task Description" wrapText="true">
                <padding>
                   <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                </padding>
                <opaqueInsets>
                   <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                </opaqueInsets>
+               <font>
+                  <Font size="12.0" />
+               </font>
             </TextArea>
          </children>
       </VBox>
